--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
     integrity="sha512-1sCRPdkRXhBV2PBLUdRb4tMg1w2YPf37qatUFeS7zlBy7jJI8Lf4VHwWfZZfpXtYSLy85pkm9GaYVYMfw5BC1A=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
 
+    <!-- bootstrap  -->
+    <!-- CSS only -->
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
 
     <!-- css  -->
     <link rel="stylesheet" href="style.css">
@@ -22,35 +25,43 @@
 <div class="navbar-section">
     <img src="" alt="logo" class="navbar-logo">
     <div class="navbar-items">
-        <a href="" class="navbar-item">Contact Us</a>
-        <a href="" class="navbar-item">Service</a>
-        <a href="" class="navbar-item">Product</a>
-        <a href="" class="navbar-item">About</a>
+        <a href="#contact" class="navbar-item">Contact Us</a>
+        <a href="#service" class="navbar-item">Service</a>
+        <a href="#product" class="navbar-item">Product</a>
+        <a href="#about" class="navbar-item">About</a>
     </div>
 </div>
 
 <div class="about-section" id="about">
-    <p class="about-para">t is a long established fact that a reader will be distracted by the readable content of a
-        page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal
+    <h3>About</h3>
+    <p class="about-para">It is a long established fact that a reader will be distracted by the readable content of a Now, if a user clicks this link, it launches one Email Client (like Lotus Notes, Outlook Express etc. ) installed on your user's computer. There is another risk to use this option to send email because if user do not have email client installed on their computer then it would not be possible to send email.
+        page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal 
         distribution of letters, as opposed to using 'Content here, content here', making</p>
 </div>
 
-<div class="products-section">
-    <div class="product">
-        <img src="" alt="picture 1">
-    </div>
-    <div class="product">
-        <img src="" alt="picture 1">
-    </div>
-    <div class="product">
-        <img src="" alt="picture 1">
-    </div>
-    <div class="product"><video src=""></video></div>
-    <div class="product"><video src=""></video></div>
-    <div class="product"><video src=""></video></div>
-</div>
 
+<div id="product" class="product-div">
+    <h3>Products</h3>
+<div class="products-section">
+    <div class="product col-md-1">
+        <img src="images/dummy1.png" alt="picture 1">
+    </div>
+    <div class="product">
+        <img src="images/dummy1.png" alt="picture 1">
+    </div>
+    <div class="product">
+        <img src="images/dummy1.png" alt="picture 1">
+    </div>
+    <div class="product"><iframe width="560" height="315" src="https://www.youtube.com/embed/VxMM4g2Sk8U" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
+    <div class="product"><iframe width="560" height="315" src="https://www.youtube.com/embed/VxMM4g2Sk8U" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
+    <div class="product"><iframe width="560" height="315" src="https://www.youtube.com/embed/VxMM4g2Sk8U" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
+</div></div>
+
+<div class="service-div" id="service">
+    <h3>Services</h3>
 <div class="service-section">
+    <h4>OEM Based</h4>
+    <h4>Indigenous</h4>
     <div class="left-container">
         <div class="service">it look like readable English. Many desktop publishing packages and web page editors now
             use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites
@@ -59,6 +70,7 @@
             use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites
             still in their infancy.</div>
     </div>
+    
     <div class="right-container">
         <div class="service">it look like readable English. Many desktop publishing packages and web page editors now
             use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites
@@ -69,16 +81,16 @@
 
 
     </div>
-</div>
+</div></div>
 
 <div class="contact-section" id="contact">
     <div class="left-contact">
         <div class="contact-item">
-            <h3>Mobile no: </h3>
+            <h4>Mobile no: </h4>
             <p>9336542822</p>
         </div>
         <div class="contact-item">
-            <h3>Email: </h3>
+            <h4>E-mail: </h4>
             <p><a href = "mailto: abc@example.com">abc@gmail.com</a></p>
         </div>
         <div class="contact-item">
@@ -86,15 +98,15 @@
         </div>
     </div>
     <div class="right-contact">
-        <h3>Address</h3>
+        <h4>Address</h4>
         <p>
             Sector 9/61, Dabra chowk <br>
             Hisar, Haryana 125005 <br>
-            
+
         </p>
     </div>
 </div>
-<div class="footer-section"><p>xyz @2020</p>
+<div class="footer-section"><p>2022 © XYZ™ Ltd. All rights reserved</p>
 </div>
 
 <body>
