--- a/index.html
+++ b/index.html
@@ -25,10 +25,11 @@
 <div class="navbar-section">
     <img src="" alt="logo" class="navbar-logo">
     <div class="navbar-items">
-        <a href="#contact" class="navbar-item">Contact Us</a>
-        <a href="#service" class="navbar-item">Service</a>
-        <a href="#product" class="navbar-item">Product</a>
         <a href="#about" class="navbar-item">About</a>
+        <a href="#product" class="navbar-item">Product</a>
+        <a href="#service" class="navbar-item">Service</a>
+        <a href="#contact" class="navbar-item">Contact Us</a>
+        
     </div>
 </div>
 
@@ -43,7 +44,7 @@
 <div id="product" class="product-div">
     <h3>Products</h3>
 <div class="products-section">
-    <div class="product col-md-1">
+    <div class="product">
         <img src="images/dummy1.png" alt="picture 1">
     </div>
     <div class="product">
